--- a/themes/codehub/stylesheets/ie.css
+++ b/themes/codehub/stylesheets/ie.css
@@ -153,26 +153,26 @@ body, .container {
   text-align: center;
 }
 
-.inline-list {
+.nav-wrapper .nav.inline-list {
   float: left;
 }
-.inline-list li {
+.nav-wrapper .nav.inline-list li {
   display: inline;
   float: left;
 }
 
-.nav-wrapper, .nav-wrapper .inline-list {
+.nav-wrapper, .nav-wrapper .nav.inline-list {
   width: 100%;
 }
 
-.nav-wrapper .inline-list li {
+.nav-wrapper .nav.inline-list li {
   width: 23%;
   margin-right: 2%;
 }
 
 #header .inner, #footer .inner,
 .profile .container,
-.index .section {
+.index .section, .organisers.section, .ccm-profile-member-list, .ccm-profile-membe {
   width: 39em;
   max-width: 39em;
   margin-left: auto;
