more ie8 tweaking; footer same across page types

--- a/themes/codehub/sass/ie.scss
+++ b/themes/codehub/sass/ie.scss
@@ -29,7 +29,7 @@ body, .container{
 
 #header .inner, #footer .inner,
 .profile .container,
-.index .section, .organisers.section, .ccm-profile-member-list, .ccm-profile-membe{
+.index .section, .organisers.section, .about.section, .ccm-profile-member-list, .ccm-profile-membe{
   width: 39em;
   max-width: 39em;
   margin-left: auto;
