--- a/themes/codehub/sass/screen.scss
+++ b/themes/codehub/sass/screen.scss
@@ -48,6 +48,7 @@ a:visited {color:#665956;}
 ul.list {
   li {
     list-style: disc;
+    list-style-position: inside;
   }
 }
 
@@ -63,8 +64,17 @@ ul.list {
   width: 100%;
 } 
 
+.codehub-logo {
+  width: 246px;
+  height: 62px;
+  margin: 13px 0 8px 30px;
+}
+
 #footer{
   background: $header-bg;
+  .inner {
+    padding: 13px 0;
+  }
 }
 
 
@@ -76,20 +86,8 @@ ul.list {
 
 
 h1{
-  background: $header-bg url(../img/codehub_inv.svg) right top no-repeat ;
-  background-size: 60px;
-  color: $fontColor;
-  height: 1.75em;
-  padding: 0 0.6em;
-  font-size: em(28px);
-  line-height: line-height(28px);
-  font-family: 'Nova Square', Arial, sans-serif;
-  //border-bottom: $body-bg 2px solid;
-  a:link, a:visited{
-    text-decoration: none;
-    color: $fontColor;
-    
-  }
+  text-indent:-9999px; 
+  height: 0;
 }
 
 
@@ -150,6 +148,7 @@ h3{
 .nav{
   background: $header-bg;
   overflow: auto;
+  padding-top: 0.25em;
   padding-bottom: 0.25em;
   li{
   @include span-columns(1,2);
