--- a/themes/codehub/stylesheets/ie.css
+++ b/themes/codehub/stylesheets/ie.css
@@ -46,7 +46,7 @@ a:visited {
 }
 
 #header {
-  background: #3d454b;
+  background: #7d858b;
   overflow: auto;
 }
 
@@ -123,11 +123,10 @@ div.about {
   line-height: 1.33333em;
 }
 
-h1 {
-  background: #3d454b url(../img/codehub_inv.svg) 280px top no-repeat;
-  background-size: 100px;
-  font-size: 3em;
-  padding-left: 0;
+.codehub-logo {
+  width: 328px;
+  height: 85px;
+  margin: 34px 0 21px 0;
 }
 
 h2, h3 {
@@ -189,5 +188,5 @@ body, .container {
 }
 
 h1 {
-  background: #3d454b url(../img/codehub.gif) right top no-repeat;
+  background: #7d858b url(../img/codehub.gif) right top no-repeat;
 }
