--- a/themes/codehub/sass/_base.scss
+++ b/themes/codehub/sass/_base.scss
@@ -14,11 +14,11 @@ $computer: 55em 12;
 
 $default-border-radius: 5px;
 
-$body-bg: #acc2be;
-$about-bg: #5c5a57;
-$orga-bg: #648494;
-$header-bg: #7d858b;
-$fontColor:#ecebe3;
+$body-bg: #fff;
+$about-bg: #fff;
+$orga-bg: #fff;
+$header-bg: #fff;
+$fontColor:#222;
 
 $font-base: 16px;
 $font-base-line-height: 24px;
