--- a/themes/codehub/sass/_fonts.scss
+++ b/themes/codehub/sass/_fonts.scss
@@ -1,6 +1,27 @@
-@font-face {
+/*@font-face {
   font-family: 'Nova Square';
   font-style: normal;
   font-weight: 400;
   src: local('Nova Square'), local('NovaSquare'), url(http://themes.googleusercontent.com/static/fonts/novasquare/v5/YsNHj2Yx5KzHzIjNe-czdIbN6UDyHWBl620a-IRfuBk.woff) format('woff');
+}
+
+@font-face {
+    font-family: 'novecentoregular';
+    src: url('/themes/codehub/fonts/novecentoslabwide-normal-webfont-webfont.woff2') format('woff2'),
+         url('/themes/codehub/fonts/novecentoslabwide-normal-webfont-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}*/
+
+@font-face {
+    font-family: 'acherus_grotesqueregular';
+    src: url('/themes/codehub/fonts/acherus_grotesque_-_regular-webfont.eot');
+    src: url('/themes/codehub/fonts/acherus_grotesque_-_regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('/themes/codehub/fonts/acherus_grotesque_-_regular-webfont.woff2') format('woff2'),
+         url('/themes/codehub/fonts/acherus_grotesque_-_regular-webfont.woff') format('woff'),
+         url('/themes/codehub/fonts/acherus_grotesque_-_regular-webfont.ttf') format('truetype'),
+         url('/themes/codehub/fonts/acherus_grotesque_-_regular-webfont.svg#acherus_grotesqueregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
 }
