--- a/themes/codehub/sass/_tablet.scss
+++ b/themes/codehub/sass/_tablet.scss
@@ -5,7 +5,7 @@ body {
 }
 
 a:link,
-a:visited {color:#d6c9c6;}
+a:visited {color:#e2231a;}
 
 .inner{
   margin-right: 0;
@@ -87,8 +87,8 @@ div.about{
 
 
 #header p{
-  font-size: em(18px);
-  line-height: line-height(18px);
+  font-size: em(21px);
+  line-height: line-height(21px);
 }
 
 .codehub-logo {
@@ -98,15 +98,17 @@ div.about{
 }
 
 h2, h3{
-  font-family: 'Nova Square', Helvetica, sans-serif;
+  font-family: 'acherus_grotesqueregular', serif;
+  font-weight: 700;
   padding-left: 0;
+  color: #444;
 }
 
 h3{
  background: inherit;
  font-weight: 400;  
- font-size: em(21px);
- line-height: line-height(21px);
+ font-size: em(34px);
+ line-height: line-height(34px);
 }
 
 .profile h3{
